feat: dependencies for project updated